ssh nonocast.cn -t todolist-update

ts, react, webpack stack:
webpack -watch

create task url:
curl -XPOST http://localhost:8080/api/tasks -H "Content-Type: application/x-www-form-urlencoded; charset=UTF-8" -H "Token: 3fea6af1349166ea" -d "content=hello-curl"

todolist
1. redis support
2. highcharts
3. querydsl
4. task: @who, #tag#
6. log in web
7. spring session with reids

master

v0.2.20
1. database import and export
2. admin增加backup management

v0.2.19
fix task title binding

v0.2.18
1. fix setState异步改变this.state,所以需要setState(..., callback);
2. 增加task status changed

v0.2.17
1. react增加task edit
2. task belongsTo改为LAZY
3. try-catch ApiAuthenticationUserDetails

v0.2.16
fix bugs

v0.2.15
1. react增加log version

v0.2.14
1. 增加task删除

v0.2.13
1. rest api exception handle

v0.2.12
1. react中新建task
2. add task api

v0.2.11
webjars改为bootcdn.cn

v0.2.10
webpack去掉jquery, bundle.js控制在10k以内

v0.2.9
bootcdn.cn对react和jquery加速

v0.2.8
1. api token auth
2. 添加测试数据
3. user增加到task的链接
4. 整合react和api/tasks

v0.2.7
fix task编辑时无法显示form.belongsTo, 把@NotNull去掉就好了

v0.2.6
apply todolist style

v0.2.5
增加api/task
db -> v0.1.7
增加react skeleton

v0.2.4
add ts/react/webpack stack

v.0.2.3
调整结构,为typescript/react作准备

v0.2.2
1. api token supported

v0.2.1
1. first react page

v0.2.0
1. null or size (validator annotation)
@Pattern(regexp="(^$|.{6,20})")

v0.1.40
1. task: 选择用户

v0.1.39
1. 增加delete user & task

v0.1.38
1. fix $.app.params 解析,需要decodeUrlComponent
2. 支持sort=createdAt,desc


v0.1.37
1. search: add clear button
    Clear Button in Bootstrap Input Group Component
    https://www.thewebflash.com/clear-button-in-bootstrap-input-group-component/
2. task: 去掉topmost和zindex, 改为priority

v0.1.36
1. fix task new & edit

v0.1.35
1. add form.error message
2. extract FormBase
3. add task new & edit
4. spring.ftl
    https://svn.apache.org/repos/asf/qpid/tags/pre-M1/java/java/management/core/lib/spring/spring.ftl

v0.1.34
fix edit page bugs

v0.1.33
1. 通过@ControllerAdvice将freemarker method加入model