@@ -1,57 +1,0 @@
-package cn.nonocast.cache;
-
-import java.io.Serializable;
-
-public class User implements Serializable {
-	private long id;
-	private String name;
-	private String email;
-	private String password;
-
-	public String getCacheKey() {
-		return "user:" + String.valueOf(id);
-	}
-
-	public long getId() {
-		return id;
-	}
-
-	public void setId(long id) {
-		this.id = id;
-	}
-
-	public String getName() {
-		return name;
-	}
-
-	public void setName(String name) {
-		this.name = name;
-	}
-
-	public String getEmail() {
-		return email;
-	}
-
-	public void setEmail(String email) {
-		this.email = email;
-	}
-
-	public String getPassword() {
-		return password;
-	}
-
-	public void setPassword(String password) {
-		this.password = password;
-	}
-
-	public User() {
-
-	}
-
-	public User(Long id, String name, String email, String password) {
-		this.id = id;
-		this.name = name;
-		this.email = email;
-		this.password = password;
-	}
-}
